--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,10 +76,13 @@ layout: default
                     <div class="ds-share-inline">
                       <ul  class="ds-share-icons-16">
 
-                        <li data-toggle="ds-share-icons-more"><a class="ds-more" href="#">分享到：</a></li>
-                        <li><a class="ds-wechat flat" href="javascript:void(0);" data-service="wechat">微信</a></li>
-                        <li><a class="ds-weibo flat" href="javascript:void(0);" data-service="weibo">微博</a></li>
-                        <li><a class="ds-douban flat" href="javascript:void(0);" data-service="douban">豆瓣</a></li>
+                          <!-- JiaThis Button BEGIN --><div id="ckepop">
+                          <span class="jiathis_txt">分享到：</span>
+                          <a class="jiathis_button_weixin">微信</a>
+                          <a href="http://www.jiathis.com/share"  class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
+                          <a class="jiathis_counter_style"></a> </div>
+                          <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1" charset="utf-8"></script>
+                    </div> <!-- JiaThis Button END -->
                       </ul>
                       <div class="ds-share-icons-more">
                       </div>
