--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,6 +34,16 @@
                         </a>
                     </li>
                     {% endif %}
+                     {% if site.resume_url %}
+                    <li>
+                        <a href="https://raw.githubusercontent.com/gaoy13800/gaoy13800.GitHub.io/master/resume.pdf">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-myresume fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    {% endif %}
                     
                     <!--
                     {% if site.douban_username %}
@@ -86,7 +96,7 @@
 
                 </ul>
                 <p class="copyright text-muted">
-                &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }} ❖ Powered by Jekyll.
+                &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }} ❖ Powered by Gaoy.
                 </p>
             </div>
         </div>
