--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,7 +21,7 @@ layout: default
 <script type="text/javascript" src="/js/backtop.js"></script>  <!-- Back Top -->
 
 <div id="back-top">
-  <a href="#top" title="回到顶部"></a>
+  <a href="#top" title="时光倒流，往上"></a>
 </div>
 
 <!-- Main Content -->
